# SDR-Dev

./: .gitignore  BentPipe.h  BentPipeDemod.cpp  CMakeLists.txt  HackRFDev  README.md
Documentation/: SDR_Dataflow.drawio  TODO.md  classDiagram.drawio  scratchpad.md
Documentation/gptDocs/: gptExplanationOfArrayVsRawArray.md  gpt_ThreadSafetyRef.md
src/: defines.h  exampleSyncronizationCode.cpp  main.cpp
src/Demod/: BentPipeDemod.cpp  BentPipeDemod.hpp  Demod.cpp  Demod.h
src/Devices/: Devices.cpp  Devices.hpp
src/Dongle/: Dongle.h  HackRFDongle.cpp  HackRFDongle.h
src/Output/: Output.h  WavOutput.cpp  WavOutput.hpp
src/util/: Channel.hpp
